--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <!--java.lang.SecurityException: ConnectivityService: Neither user 10056 nor current process has android.permission.ACCESS_NETWORK_STATE.-->
     <uses-permission android:name="android.permission.INTERNET" /> <!--Allows app to open network sockets-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!--Allows app to access information about networks-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!--Allows app to write to external storage-->
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!--Allows app to write to external storage tarjeta sd..-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!--Allows app to access approximate location-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!--Allows app to access precise location-->
