--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 //Dependencias que vamos a utilizar. Añadir otras apis...
+//Para que compile con la version 23.0.1
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1' //soporte para versiones anteriores. Retrocompatibilidad.
