--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,63 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="es.jcyl.cee.cylford.app.cyldigital" >
+    package="es.jcyl.cee.cylford.app.cyldigital">
 
-
-    <!--Permisos INTERNET, ACCESS_NETWORK_STATE, WRITE_EXTERNAL_STORAGE para evitar errores de Conectividad-->
-    <!--java.lang.SecurityException: ConnectivityService: Neither user 10056 nor current process has android.permission.ACCESS_NETWORK_STATE.-->
-    <uses-permission android:name="android.permission.INTERNET" /> <!--Allows app to open network sockets-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!--Allows app to access information about networks-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!--Allows app to write to external storage tarjeta sd..-->
+    <!-- Permisos INTERNET, ACCESS_NETWORK_STATE, WRITE_EXTERNAL_STORAGE para evitar errores de Conectividad -->
+    <!-- java.lang.SecurityException: ConnectivityService: Neither user 10056 nor current process has android.permission.ACCESS_NETWORK_STATE. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Allows app to open network sockets -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Allows app to access information about networks -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- Allows app to write to external storage tarjeta sd.. -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!--Allows app to access approximate location-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!--Allows app to access precise location-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- Allows app to access approximate location -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <!--android:minSdkVersion — The minimum version of the Android platform on which the application will run, specified by the platform's API Level identifier. -->
-    <!--android:targetSdkVersion — Specifies the API Level on which the application is designed to run.
+    <!-- Allows app to access precise location -->
+    <!-- android:minSdkVersion — The minimum version of the Android platform on which the application will run, specified by the platform's API Level identifier. -->
+    <!--
+android:targetSdkVersion — Specifies the API Level on which the application is designed to run.
     In some cases, this allows the application to use manifest elements or behaviors defined in the target API Level,
-    rather than being restricted to using only those defined for the minimum API Level.-->
+    rather than being restricted to using only those defined for the minimum API Level.
+    -->
     <!--
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
     -->
-
-    <!--Clase App se instancia al arrancarse el proceso de la aplicación. Antes que ningún compoenente de la aplicación-->
+    <!-- Clase App se instancia al arrancarse el proceso de la aplicación. Antes que ningún compoenente de la aplicación -->
     <application
+        android:name=".backend.App"
         android:allowBackup="true"
-        android:name="es.jcyl.cee.cylford.app.cyldigital.backend.App"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
         <!-- Deberemos de especificar que la primera actividad a ejecutar cuando arranque la aplicación sea la actividad SplashActivity -->
         <!-- Quito la etiqueta del título android:label="@string/title_activity_splash" a la pantalla -->
         <activity
             android:name=".ui.SplashActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" /> <!--Solo una puede ser LAUNCHER. La principal.-->
+
+                <category android:name="android.intent.category.LAUNCHER" />
+                <!-- Solo una puede ser LAUNCHER. La principal. -->
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".ui.MenuActivity"
             android:label="@string/title_activity_menu"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.PresencialActivity"
-            android:label="@string/title_activity_presencial" >
-        </activity>
+            android:label="@string/title_activity_presencial" />
         <activity
             android:name=".ui.OnlineActivity"
-            android:label="@string/title_activity_online" >
-        </activity>
+            android:label="@string/title_activity_online" />
+        <activity
+            android:name=".ui.WebContentActivity"
+            android:label="@string/title_activity_web_content"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.DetalleActividadActivity"
+            android:label="@string/title_activity_detalle_actividad"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
