--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23 //versión con la que se compila
+    compileSdkVersion 23 // versión con la que se compila
     buildToolsVersion "23.0.0"
 
     defaultConfig {
@@ -10,7 +10,8 @@ android {
         minSdkVersion 15 //minimo sdk con el que aseguramos que va a funcionar
         targetSdkVersion 23
         versionCode 1 //para nosotros
-        versionName "1.0" //para la tienda de desarrollo. Control de versiones de software. Lo va a pedir la tienda al subirlo
+        versionName "1.0"
+        //para la tienda de desarrollo. Control de versiones de software. Lo va a pedir la tienda al subirlo
     }
     buildTypes {
         release {
@@ -24,6 +25,10 @@ android {
 //Para que compile con la version 23.0.1
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1' //soporte para versiones anteriores. Retrocompatibilidad.
-    compile project (':Android-PullToRefresh-master')
+    //compile files('libs/android-support-v4.jar')
+    //soporte para versiones anteriores. Retrocompatibilidad.
+    compile project(':Android-PullToRefresh-master')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:design:23.0.1'
+    compile files('libs/slider.jar')
 }
